2006-08-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/ministatus.cpp, src/gui/ministatus.h: Applied patch by mrha
	(Herbi), adding experience bar to the ministatus in the top left.
	* configure.ac, data/graphics/items/Makefile.am,
	data/graphics/Makefile.am: Added Makefile.am to make sure the item
	icons are installed.
	* src/player.cpp, src/animation.h, src/player.h,
	src/animatedsprite.cpp, src/animation.cpp: Applied patch by Bahamut81
	which implements resetting of Animation, Action and AnimatedSprite.
	This fixes the animation synchronization issues.

2006-08-25  Matthias Hartmann  <hartmann.matthias@gmail.com>

	* src/gui/char_select.cpp, src/gui/char_select.h, src/main.cpp: Added
	--playername command line option for selecting the character you want
	to play with (patch applied by Bjørn Lindeijer).

2006-08-25  Philipp Sehmisch  <tmw@crushnet.org>

	* src/engine.cpp, src/map.h, src/map.cpp: Addded new config variable
	"OverlayDetail" to control the number of drawn overlays.
	2 (or more) = all (default), 1 = only the first one, 0 = none.

2006-08-24  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/help/commands.txt, README, src/game.cpp, src/gui/chat.cpp,
	src/gui/window.cpp, src/gui/window.h: Added support for sticky windows
	as discussed with doener. Patch by AHarrison.
	* data/items.xml: Added jeans shorts.

2006-08-24  Philipp Sehmisch  <tmw@crushnet.org>

	* src/engine.cpp: Scrolling speed no longer affected by framerate.
	* src/map.cpp, scr/map.h: Overlay speed no longer affected by
	framerate.
	* data/maps/new_1-1.tmx.gz, data/graphics/new_7-1.tmx.gz,
	data/graphics/images/ambient/sandstorm.png: Redone sandstorm effect
	(larger and more transparent image, tripple layer parallax scrolling)

2006-08-24  Frode Lindeijer  <f.lindeijer@gmail.com>

	* data/graphics/sprites/item004.png, data/graphics/sprites/item005.png,
	data/graphics/sprites/Makefile.am,
	data/graphics/items/armor-legs-cottonshorts,