@@ -26,22 +26,31 @@
 #include <guichan/widgets/label.hpp>
 
 #include "button.h"
-
+#include "checkbox.h"
+#include "../configuration.h"
 #include "../joystick.h"
 
 extern Joystick *joystick;
 
 Setup_Joystick::Setup_Joystick():
     mCalibrateLabel(new gcn::Label("Press the button to start calibration")),
-    mCalibrateButton(new Button("Calibrate", "calibrate", this))
+    mCalibrateButton(new Button("Calibrate", "calibrate", this)),
+    mJoystickEnabled(new CheckBox("Enable joystick"))
 {
     setOpaque(false);
+    mJoystickEnabled->setPosition(10, 10);
+    mCalibrateLabel->setPosition(10, 25);
+    mCalibrateButton->setPosition(10, 30 + mCalibrateLabel->getHeight());
 
-    mCalibrateLabel->setPosition(5, 10);
-    mCalibrateButton->setPosition(10, 20 + mCalibrateLabel->getHeight());
+    mOriginalJoystickEnabled = (joystick ? joystick->isEnabled() : false);
+    mJoystickEnabled->setMarked(mOriginalJoystickEnabled);
+
+    mJoystickEnabled->setEventId("joystickEnabled");
+    mJoystickEnabled->addActionListener(this);
 
     add(mCalibrateLabel);
     add(mCalibrateButton);
+    add(mJoystickEnabled);
 }
 
 void Setup_Joystick::action(const std::string &event, gcn::Widget *widget)
@@ -50,13 +59,37 @@ void Setup_Joystick::action(const std::string &event, gcn::Widget *widget)
         return;
     }
 
-    if (joystick->isCalibrating()) {
-        mCalibrateButton->setCaption("Calibrate");
-        mCalibrateLabel->setCaption("Press the button to start calibration");
-        joystick->finishCalibration();
-    } else {
-        mCalibrateButton->setCaption("Stop");
-        mCalibrateLabel->setCaption("Rotate the stick");
-        joystick->startCalibration();
+    if (event == "joystickEnabled")
+    {
+        joystick->setEnabled(mJoystickEnabled->isMarked());
+    }
+    else
+    {
+        if (joystick->isCalibrating()) {
+            mCalibrateButton->setCaption("Calibrate");
+            mCalibrateLabel->setCaption(
+                    "Press the button to start calibration");
+            joystick->finishCalibration();
+        } else {
+            mCalibrateButton->setCaption("Stop");
+            mCalibrateLabel->setCaption("Rotate the stick");
+            joystick->startCalibration();
+        }
     }
 }
+
+void Setup_Joystick::cancel()
+{
+    if (joystick)
+    {
+        joystick->setEnabled(mOriginalJoystickEnabled);
+    }
+    mJoystickEnabled->setMarked(mOriginalJoystickEnabled);
+}
+
+void Setup_Joystick::apply()
+{
+    config.setValue("joystickEnabled",
+                    joystick ? joystick->isEnabled() : false);
+}
+
